# Primey

./: CMakeLists.txt
src/: Primey.cpp
